<resources>
  <string name="app_name">Chat Me</string>
  <string name="welcome">Welcome</string>
  <string name="login_to_continue">Login To Continue</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="create_new_account">Create New Account</string>
  <string name="confirm_password">Confirm Password</string>
  <string name="name">Name</string>
  <string name="select_user">Select User</string>
  <string name="type_a_message">Type a message</string>
</resources>