<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.08"
      tools:ignore="MissingConstraints"
      android:layout_margin="@dimen/_20sdp"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/primary"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_continue"
        android:textColor="@color/primary"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/background_input"
        android:height="@dimen/_45sdp"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_16sdp"
        android:textColor="@color/primary"
        android:textSize="@dimen/_13sdp"
        />
    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/background_input"
        android:height="@dimen/_45sdp"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_16sdp"
        android:textColor="@color/primary"
        android:textSize="@dimen/_13sdp"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:animateLayoutChanges="true"
        >
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:id="@+id/signInBtn"
        android:text="Sign IN"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/_13sdp"
        app:cornerRadius="@dimen/_7sdp"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_gravity="center"
        android:visibility="invisible"
        />

    </FrameLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createNewAccount"
        android:textColor="@color/primary"
        android:text="@string/create_new_account"
        android:textAlignment="center"
        android:textSize="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_16sdp"


        />


  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>